--- a/source/css/style.scss
+++ b/source/css/style.scss
@@ -11,8 +11,8 @@ $typecsset-show-baseline:       false;
 $light_background_color: #f6f6f6;
 $detail_color: #dedede;
 $text_color: #555;
-$link_color: #469ab5;
-$link_hover_color: darken( $link_color, 10% );
+$link_color: #2a5db0;
+$link_hover_color: #2200cc;
 
 $footer_height: 2 * $typecsset-base-line-height;
 
