--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -16,6 +16,7 @@
       <ul class="horizontal-list">
         <li><%= link_to 'kikito', 'https://github.com/kikito', class: 'github' %></li>
         <li><%= link_to '@otikik', 'https://twitter.com/otikik', class: 'twitter' %></li>
+        <li><%= link_to 'kikito', 'http://stackoverflow.com/users/312586/kikito', class: 'stackoverflow' %></li>
       </ul>
     </footer>
   </body>
