--- a/source/css/style.scss
+++ b/source/css/style.scss
@@ -34,6 +34,7 @@ body {
 }
 
 h1,h2,h3,h4,h5,h6 {
+  -webkit-font-smoothing: subpixel-antialiased;
   font-family: 'Montserrat', Georgia, serif;
   font-weight: normal;
 }
