use sections and headers

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -9,9 +9,9 @@
   </head>
 
   <body class="<%= page_classes %>">
-    <div class="main">
+    <section class="main">
       <%= yield %>
-    </div>
+    </section>
     <footer>
       <ul class="horizontal-list">
         <li><%= link_to 'kikito', 'https://github.com/kikito', class: 'github' %></li>
