--- a/source/css/style.scss
+++ b/source/css/style.scss
@@ -1,7 +1,3 @@
-$typecsset-base-font-size:      18px;
-$typecsset-base-line-height:    26px;
-$typecsset-show-baseline:       false;
-
 @import "normalize";
 @import "typecsset";
 @import "pygments";
@@ -51,7 +47,7 @@ h1.hero {
 pre, code {
   font-family: 'Inconsolata', monospace;
   background-color: $light_background_color;
-  border: 1px solid $detail_color;
+  box-shadow: inset 0 0 0 1px $detail_color;
 }
 
 code {
