--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -14,9 +14,15 @@
     </section>
     <footer>
       <ul class="horizontal-list">
-        <li><%= link_to 'kikito', 'https://github.com/kikito', class: 'github' %></li>
-        <li><%= link_to '@otikik', 'https://twitter.com/otikik', class: 'twitter' %></li>
-        <li><%= link_to 'kikito', 'http://stackoverflow.com/users/312586/kikito', class: 'stackoverflow' %></li>
+        <li>
+          <a href='https://github.com/kikito' class='icon-link' title= 'github: kikito'><img src="/img/github.svg" width="18" height="18"></a>
+        </li>
+        <li>
+          <a href='https://twitter.com/otikik' class='icon-link' title= 'twitter: otikik'><img src="/img/twitter.svg" width="18" height="18"></a>
+        </li>
+        <li>
+          <a href='http://stackoverflow.com/users/312586/kikito' class='icon-link' title= 'stackoverflow: kikito'><img src="/img/stackoverflow.svg" width="18" height="18"></a>
+        </li>
       </ul>
     </footer>
   </body>
