--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,5 +1,5 @@
 <header>
-<h1 class="hero"><a href="/">Enrique García Cota</a></h1>
+<h1><a href="/">Enrique García Cota</a></h1>
 </header>
 
 <hr />
