--- a/source/css/style.scss
+++ b/source/css/style.scss
@@ -7,8 +7,9 @@
 $primary-color:    #307EA9; // links, etc
 $secondary-color:  #555;    // text
 $tertiary-color:   #bbb;    // damped text
-$background-color: #f6f6f6; // background in code sections
 $detail-color:     #dedede; // borders, etc
+$background-color: #f6f6f6;    // background in code sections
+$alt-background-color: #eee; // background in code sections
 $transparent-color: rgba(0,0,0,0);
 
 
@@ -17,6 +18,7 @@ $footer_height: 2 * $typecsset-base-line-height;
 html {
   position: relative;
   min-height: 100%;
+  background-color: $background-color;
 }
 
 body {
@@ -54,13 +56,9 @@ time {
   }
 }
 
-h1.hero {
-  @include typecsset-font-size(66px);
-}
-
 pre, code {
   font-family: 'Inconsolata', monospace;
-  background-color: $background-color;
+  background-color: $alt-background-color;
   box-shadow: inset 0 0 0 1px $detail-color;
 }
 
