--- a/source/css/style.scss
+++ b/source/css/style.scss
@@ -2,7 +2,7 @@
 @import "typecsset";
 @import "pygments";
 
-@import url(http://fonts.googleapis.com/css?family=Lora:400,700,400italic|Montserrat|Inconsolata);
+@import url(https://fonts.googleapis.com/css?family=Lora:400,700,400italic|Montserrat|Inconsolata);
 
 $primary-color:    #307EA9; // links, etc
 $secondary-color:  #555;    // text
