--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -15,13 +15,13 @@
     <footer>
       <ul class="horizontal-list">
         <li>
-          <a href='https://github.com/kikito' class='icon-link' title= 'github: kikito'><img src="/img/github.svg" width="18" height="18"></a>
+          <a href='https://github.com/kikito' class='social icon-github' title= 'github: kikito'></a>
         </li>
         <li>
-          <a href='https://twitter.com/otikik' class='icon-link' title= 'twitter: otikik'><img src="/img/twitter.svg" width="18" height="18"></a>
+          <a href='https://twitter.com/otikik' class='social icon-twitter' title= 'twitter: otikik'></a>
         </li>
         <li>
-          <a href='http://stackoverflow.com/users/312586/kikito' class='icon-link' title= 'stackoverflow: kikito'><img src="/img/stackoverflow.svg" width="18" height="18"></a>
+          <a href='http://stackoverflow.com/users/312586/kikito' class='social icon-stackoverflow' title= 'stackoverflow: kikito'></a>
         </li>
       </ul>
     </footer>
