--- a/source/css/style.scss
+++ b/source/css/style.scss
@@ -2,8 +2,9 @@
 @import "typecsset";
 @import "pygments";
 @import "custom-symbols";
+@import "clear-sans";
 
-@import url(https://fonts.googleapis.com/css?family=Lora:400,700,400italic|Montserrat|Inconsolata);
+@import url(https://fonts.googleapis.com/css?family=Lora:400,700,400italic|Inconsolata);
 
 $primary-color:    #307EA9; // links, etc
 $secondary-color:  #555;    // text
@@ -35,8 +36,7 @@ body {
 }
 
 h1,h2,h3,h4,h5,h6 {
-  -webkit-font-smoothing: subpixel-antialiased;
-  font-family: 'Montserrat', Georgia, serif;
+  font-family: 'Clear Sans', Georgia, serif;
   font-weight: normal;
 }
 
