--- a/source/css/style.scss
+++ b/source/css/style.scss
@@ -54,6 +54,7 @@ h1,h2,h3,h4,h5,h6 {
 time {
   font-size: 1rem;
   color: $tertiary-color;
+  letter-spacing: -0.05rem;
 }
 
 .detailed-item {
@@ -88,6 +89,7 @@ pre.highlight {
 a {
   text-decoration: none;
   color: $primary-color;
+  transition: color 0.25s ease;
   &:hover {
     color: lighten( $primary-color, 10% );
   }
@@ -132,11 +134,23 @@ article{
   }
 }
 
-a.social {
+a.social, a.site-nav-link, .logo a {
   color: $secondary-color;
   &:hover {
     color: lighten( $primary-color, 10% );
   }
+}
+
+a.site-nav-link {
+  font-family: $font-family-sans;
+  text-transform: uppercase;
+}
+
+.corner {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  line-height: 1rem;
 }
 
 blockquote {
