--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -14,7 +14,7 @@
       <h1 class="logo"><a href="/">kiki.to</a></h1>
       <nav class='site-nav'>
         <ul class='horizontal-list'>
-          <li><a href="/about">About</a></li>
+          <li><a class='site-nav-link' href="/about">About</a></li>
         </ul>
       </nav>
     </header>
@@ -36,6 +36,7 @@
           <a href='http://stackoverflow.com/users/312586/kikito' class='social icon-stackoverflow' title= 'stackoverflow: kikito'></a>
         </li>
       </ul>
+      <a class='social corner' title='atom feed' href='/feed.xml'><i class='icon-rss'></i></a>
     </footer>
   </body>
 </html>
