added legal symbols & page

--- a/source/css/icons.scss
+++ b/source/css/icons.scss
@@ -27,5 +27,7 @@
 .icon-rss:before { content: '\25c9'; } /* '◉' */
 .icon-github:before { content: '\24a2'; } /* '⒢' */
 .icon-twitter:before { content: '\74'; } /* 't' */
+.icon-cc:before { content: '\a9'; } /* '©' */
+.icon-cc-by:before { content: '\ae'; } /* '®' */
 .icon-quote-left:before { content: '\201c'; } /* '“' */
 .icon-quote-right:before { content: '\201d'; } /* '”' */
