--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -36,7 +36,8 @@
           <a href='http://stackoverflow.com/users/312586/kikito' class='social icon-stackoverflow' title= 'stackoverflow: kikito'></a>
         </li>
       </ul>
-      <a class='social corner' title='atom feed' href='/feed.xml'><i class='icon-rss'></i></a>
+      <a class='damped left corner' title='atom feed' href='/feed.xml'><i class='icon-rss'></i></a>
+      <a class='damped right corner' title='legal stuff' href='/legal'><i class='icon-cc'></i><i class='icon-cc-by'></i></a>
     </footer>
   </body>
 </html>
