use setting variables in title, author and site url

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv='X-UA-Compatible' content='IE=edge;chrome=1' />
-    <title><%= current_article.present? ? current_article.title : "kikito.github.io" %></title>
+    <title><%= settings.site_title %>
+      <%= " | #{current_page.data.title}" if current_page.data.title.present? %>
+      <%= " | #{current_article.title}" if current_article.present? %>
+    </title>
     <%= feed_tag :atom, "#{blog.options.prefix.to_s}/feed.xml", title: "Atom Feed" %>
     <%= stylesheet_link_tag "style" %>
   </head>
