--- a/source/css/style.scss
+++ b/source/css/style.scss
@@ -2,7 +2,6 @@
 @import "typecsset";
 @import "pygments";
 @import "fonts";
-@import "icons";
 
 $primary-color:    #307EA9;  // links, etc
 $secondary-color:  #555;     // text
@@ -12,8 +11,6 @@ $background-color: #fafafa;  // background in code sections
 $alt-background-color: #eee; // background in code sections
 $hover-color: lighten( $primary-color, 10% ); // hover links
 $transparent-color: rgba(0,0,0,0);
-
-
 
 $footer-height: 4 * $typecsset-base-line-height;
 
@@ -198,5 +195,39 @@ blockquote {
 .text-centered {
   text-align: center;
 }
+
+[class^="icon-"]:before, [class*=" icon-"]:before {
+  font-family: $font-family-custom;
+  font-style: normal;
+  font-weight: normal;
+  speak: none;
+
+  display: inline-block;
+  text-decoration: inherit;
+  width: 1em;
+  margin-right: .2em;
+  text-align: center;
+  /* opacity: .8; */
+
+  /* For safety - reset parent styles, that can break glyph codes*/
+  font-variant: normal;
+  text-transform: none;
+
+  /* fix buttons height, for twitter bootstrap */
+  line-height: 1em;
+
+  /* increase size */
+  font-size: 120%;
+}
+
+.icon-stackoverflow:before { content: '\4dc0'; } /* '䷀' */
+.icon-mail:before { content: '\2709'; } /* '✉' */
+.icon-rss:before { content: '\25c9'; } /* '◉' */
+.icon-github:before { content: '\24a2'; } /* '⒢' */
+.icon-twitter:before { content: '\74'; } /* 't' */
+.icon-cc:before { content: '\a9'; } /* '©' */
+.icon-cc-by:before { content: '\ae'; } /* '®' */
+.icon-quote-left:before { content: '\201c'; } /* '“' */
+.icon-quote-right:before { content: '\201d'; } /* '”' */
 
 
