--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,7 +2,7 @@
 <% page_articles.each_with_index do |article, i| %>
   <li>
     <h3 class='detailed-item'>
-      <%= link_to article.title, article, class: 'item' %>
+      <%= link_to article.title, article, class: 'item', title: superstrip(article.summary) %>
       <time class='detail' datetime="<%= article.date.utc %>"><%= article.date.strftime('%B %d, %Y') %></time>
     </h3>
   </li>
