--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -4,10 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv='X-UA-Compatible' content='IE=edge;chrome=1' />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title><%= settings.site_title %>
-      <%= " | #{current_page.data.title}" if current_page.data.title.present? %>
-      <%= " | #{current_article.title}" if current_article.present? %>
-    </title>
+    <meta name="description" content="<%= meta_description %>">
+    <title><%= page_title %></title>
     <%= feed_tag :atom, "#{blog.options.prefix.to_s}/feed.xml", title: "Atom Feed" %>
     <%= stylesheet_link_tag "style" %>
   </head>
