--- a/source/css/typecsset.scss
+++ b/source/css/typecsset.scss
@@ -76,9 +76,9 @@ $typecsset-magic-ratio:         $typecsset-base-line-height / $typecsset-base-fo
 //     @include typecsset-space(padding-left);
 // }
 //
-@mixin typecsset-space($property) {
-    #{$property}: 2 * $typecsset-magic-number;
-    #{$property}: 2 * $typecsset-magic-ratio + rem;
+@mixin typecsset-space($property, $multiplier: 2) {
+    #{$property}: $multiplier * $typecsset-magic-number;
+    #{$property}: $multiplier * $typecsset-magic-ratio + rem;
 }
 
 // A small, internally-used function to remove the units from a given value.
