--- a/source/css/style.scss
+++ b/source/css/style.scss
@@ -14,6 +14,8 @@ $transparent-color: rgba(0,0,0,0);
 
 $footer-height: 4 * $typecsset-base-line-height;
 
+$small-number: 10px;
+
 // This basically means "not mobile"
 @mixin medium-or-big-screen {
   @media screen and (min-width: 500px) {
@@ -29,11 +31,11 @@ html {
 
 body {
   font-family: $font-family-serif;
-  padding: $typecsset-magic-number 5px $typecsset-magic-number + $footer-height 5px;
+  padding: $typecsset-magic-number $small-number $typecsset-magic-number + $footer-height $small-number;
   color: $secondary-color;
 }
 
-header, .main {
+.main {
   margin-left: auto;
   margin-right: auto;
   max-width: 50em;
@@ -114,12 +116,21 @@ a {
 }
 
 footer{
-  text-align: center;
   position: absolute;
   left: 0;
   bottom: 0;
   width: 100%;
   height: $footer-height;
+  .main {
+    height: $footer-height;
+  }
+  .corner {
+    position: absolute;
+    bottom: $small-number;
+    line-height: 1rem;
+    &.left { left: 1px; }
+    &.right { right: 1px; }
+  }
 }
 
 hr {
@@ -166,7 +177,7 @@ a.site-nav-link {
   text-transform: uppercase;
 }
 
-a.social, a.site-nav-link, .logo a, a.damped {
+a.social, a.site-nav-link, .logo a {
   &:hover {
     color: $hover-color;
   }
@@ -174,17 +185,7 @@ a.social, a.site-nav-link, .logo a, a.damped {
 
 
 
-.corner {
-  position: absolute;
-  bottom: 1px;
-  line-height: 1rem;
-  &.left {
-    left: 1px;
-  }
-  &.right {
-    right: 1px;
-  }
-}
+
 
 // Deactivate left margins on mobile
 blockquote, ul, ol, dd {
@@ -235,7 +236,6 @@ blockquote {
   display: inline-block;
   text-decoration: inherit;
   width: 1em;
-  margin-right: .2em;
   text-align: center;
   /* opacity: .8; */
 
