--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -30,8 +30,10 @@
     </section>
     <footer>
       <div class="main">
-        <div class="left corner">
-          <a class='social damped' title='legal stuff' href='/legal'><i class='icon-cc'></i> <i class='icon-cc-by'></i></a>
+        <div class="left corner damped">
+          <a class='social' title='legal stuff' href='/legal'><i class='icon-cc'></i> <i class='icon-cc-by'></i></a>
+          &bull;
+          <a class='social logo' href='/'>kiki.to</a>
         </div>
         <div class="right corner">
           <ul class='horizontal-list'>
